--- a/README
+++ b/README
@@ -1,2 +1,10 @@
-(1) Testing strategies to find the optimal technique to use expert demonstrations during online RL after bootstrapping. 
-(2) Analyse the effects of quantity and quality of (expert/suboptimal) demonstrations on the initial learning, overall performance, time to convergence etc. 
+# Reinforcement Learning - Deep Q Learning from Demonstrations (DQfD)
+
+## Summary
+- Bootstrapping an RL model using expert demonstrations has shown to improve overall performance and sample efficiency. 
+- This project work analyses how expert demostrations can be used during the online-RL phase after the bootstrapping process. 
+- Created and tested different scheduling techniques across multiple physics based games to evaluate their performance. 
+
+## Files
+- IRL-DQfD: Implements the DDQN and the DQfD model. Analyses 4 different scheduling techniques: linear annealing, exponential annealing, threshold based annealing and constant. 
+- Final_Presentation, IRL_Final_Report: Contains detailed analysis of the comparisons and the final results. 
